[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "CLI tool to fetch PubMed papers with pharma/biotech author affiliations"
authors = ["Gopisetti Gopi gopisettigopi6756@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
tqdm = "^4.66.4"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
pandas = "^2.2.2"

[tool.poetry.scripts]
get-papers-list = "cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
